2005-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-telnet)
	(tramp-open-connection-rsh, tramp-open-connection-su)
	(tramp-open-connection-multi): Set PS1 to "$ ".  Otherwise, a
	local shell prompt could hurt.  Reported by Romain Francoise
	<romain@orebokech.com>.

2005-11-02  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-action-out-of-band): Handle scp message
	"Permission denied".

2005-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Escape parentheses in docstring
	starting at beginning of line.  Fontification is messed up when
	`open-paren-in-column-0-is-defun-start' set to t.  Reported by
	John Paul Wallington <jpw@pobox.com>.

2005-10-28  Richard M. Stallman  <rms@gnu.org>

	* tramp.el (tramp-completion-mode): defvar moved up.

2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-let-maybe): Add `edebug-form-spec' property.
	(tramp-handle-expand-file-name): Bind `default-directory' locally
	to "/" in order to avoid problems with UNC shares or Cygwin
	mounts.

2005-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): New defvar.  Used in
	`tramp-completion-mode' for checking if we are in completion mode.
	(tramp-completion-handle-file-name-all-completions): Reorder code
	in order to complete for file names only in case there are no
	method/user/host completions.  This is necessary for cooperation
	with ido.  Reported by Kim F. Storm <storm@cua.dk>.

2005-10-08  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-perl-directory-files-and-attributes): Add error
	handling.
	(tramp-handle-directory-files-and-attributes): Handle perl error
	msg.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* tramp.el: Require `timer-funcs' instead of `timer' if in
	XEmacs.

2005-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-md5-function): Fix typo in error message.

2005-10-08  Michael Albinus  <michael.albinus@gmx.de>
